Updated Android App
Imported the FlowText.java file. Made several edits to make it usable in the MainActivity. Customized the MainActivity layout as well to accept user input: both sentence and character limit. It should do all conversion where neccessary and run the TextFlow class methods.

--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FlowText Application</string>
+    <string name="button_prompt">Find Solution!</string>
+    <string name="sentence_prompt">A sentence goes here</string>
+    <string name="instructions">Input your text below</string>
+    <string name="width_prompt">Enter a width for the word wrap.</string>
 </resources>
