Added a Scroll View and Thanks
Made it so that scrollin is enabled for both the LinearLayout and TextView displaying the river output. Added another TextView that thanks the user for using the app. Solved the bg where it displayed the second longest river.

--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="sentence_prompt">A sentence goes here</string>
     <string name="instructions">Input your text below</string>
     <string name="width_prompt">Enter a width for the word wrap.</string>
+    <string name="thanks_user">Thank you for using my App.</string>
 </resources>
